corrections on /api/clients/ changing query param from clientId to cpf
